RESOLVED FIXED 279820
[GStreamer][MSE] Playbin3's "element-setup" isn't called for uridecodebin3
https://bugs.webkit.org/show_bug.cgi?id=279820
Summary [GStreamer][MSE] Playbin3's "element-setup" isn't called for uridecodebin3
Carlos Bentzen
Reported 2024-09-17 06:38:42 PDT
Since 1.22, playbin3 creates uridecodebin3 in its _init() function. This is before the "element-setup" signal can be configured. Commit in GStreamer: https://gitlab.freedesktop.org/gstreamer/gstreamer/-/commit/6bffbe283ad6a662753fc8164fd8efd9d80d106e Not getting the signal for uridecodebin3 means we don't set the "buffer-size" and we don't call the platform quirks for uridecodebin3 with gst >= 1.22. Patch coming up soon.
Attachments
Carlos Bentzen
Comment 1 2024-09-17 06:45:01 PDT
EWS
Comment 2 2024-09-18 01:00:49 PDT
Committed 283830@main (61cf3c8e032a): <https://commits.webkit.org/283830@main> Reviewed commits have been landed. Closing PR #33766 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-09-18 01:05:18 PDT
Note You need to log in before you can comment on or make changes to this bug.