[GStreamer][MSE] Playbin3's "element-setup" isn't called for uridecodebin3 https://bugs.webkit.org/show_bug.cgi?id=279820

Reviewed by Philippe Normand.

Since GStreamer 1.22, playbin3 creates uridecodebin3 in its _init() function.
This is before the "element-setup" signal can be configured.

Not getting the signal for uridecodebin3 means we weren't setting "buffer-size"
on uridecodebin3, and not calling the platform quirks for uridecodebin3.

Fix this by explicitly getting the uridecodebin3 and call configureElement on
it if we are on GStreamer >= 1.22.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createGSTPlayBin):

Canonical link: https://commits.webkit.org/283830@main